# EIP_GROUND_TRUTH

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  README.md  sdkconfig
components/current_loop_4_20ma/: CMakeLists.txt  INTEGRATION.md  README.md  current_loop_4_20ma.c
components/current_loop_4_20ma/include/: current_loop_4_20ma.h
components/gp8403_dac/: README.md  gp8403_dac.c
components/gp8403_dac/include/: gp8403_dac.h
components/log_buffer/: log_buffer.c
components/lsm6ds3/: ASSEMBLY_DATA.md  lsm6ds3.c
components/lsm6ds3/include/: lsm6ds3.h
components/lwip/: README.md
components/modbus_tcp/src/: modbus_register_map.c  modbus_tcp.c
components/mpu6050/: README.md  mpu6050.c
components/mpu6050/include/: mpu6050.h
components/nau7802/: idf_component.yml
components/opener/: CMakeLists.txt
components/system_config/: i2c_config.c  mcp_config.c  system_config.c
components/system_config/include/: i2c_config.h  mcp_config.h  system_config.h
components/webui/: CMakeLists.txt  README.md
dependency_modifications/: LWIP_MODIFICATIONS.md
dependency_modifications/lwIP/: ACD_ARP_FRAME_STORAGE_ISSUE.md  acd.c
docs/: ACD_CONFLICT_REPORTING.md  API_Endpoints.md  ASSEMBLY_DATA_LAYOUT.md  ArpDefensive.csv  DHCP_ACD_RUNTIME_CONTROL.md  DOXYGEN_SETUP.md  ExportSniff.md  ExportSniff.pdml  LatestSniff.csv  RFC5227_NETIF_REFACTORING_DESIGN.md  WIRESHARK_FILTERS.md  doxygen_topics.h
eds/: ESP32P4_OPENER.eds.ebf
main/: CMakeLists.txt  Kconfig.projbuild  main.c
scripts/: copy_firmware.py
tools/: README.md  pdml_to_markdown.py
(+7 files in other folders)
