# CMakeLists.txt for 4-20mA Current Loop Output Component
#
# NOTE: This component is NOT included in the build by default.
# To enable this component:
# 1. Uncomment the idf_component_register section below
# 2. Add the component to your main CMakeLists.txt if needed
# 3. Include the header in your code: #include "current_loop_4_20ma.h"
# 4. Add Kconfig option to main/Kconfig.projbuild for GPIO selection

# idf_component_register(
#     SRCS 
#         "current_loop_4_20ma.c"
#     INCLUDE_DIRS 
#         "include"
#     REQUIRES 
#         driver
# )

# Component is disabled - uncomment above to enable

